kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__type_alias_recovery_6.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"type pkg_path = 'data'\"#)"
---
Module {
    filename: "",
    pkg: "",
    doc: "",
    name: "",
    body: [
        Node {
            node: TypeAlias(
                TypeAliasStmt {
                    type_name: Node {
                        node: Identifier {
                            names: [
                                Node {
                                    node: "pkg_path",
                                    filename: "",
                                    line: 1,
                                    column: 5,
                                    end_line: 1,
                                    end_column: 13,
                                },
                            ],
                            pkgpath: "",
                            ctx: Load,
                        },
                        filename: "",
                        line: 1,
                        column: 5,
                        end_line: 1,
                        end_column: 13,
                    },
                    type_value: Node {
                        node: "\"data\"",
                        filename: "",
                        line: 1,
                        column: 16,
                        end_line: 1,
                        end_column: 22,
                    },
                    ty: Node {
                        node: Literal(
                            Str(
                                "data",
                            ),
                        ),
                        filename: "",
                        line: 1,
                        column: 16,
                        end_line: 1,
                        end_column: 22,
                    },
                },
            ),
            filename: "",
            line: 1,
            column: 5,
            end_line: 1,
            end_column: 22,
        },
    ],
    comments: [],
}

