kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__unary_recovery_2.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 73
expression: "crate::tests::parsing_expr_string(r#\"not (!a)\"#)"
---
Node {
    node: Unary(
        UnaryExpr {
            op: Not,
            operand: Node {
                node: Paren(
                    ParenExpr {
                        expr: Node {
                            node: Unary(
                                UnaryExpr {
                                    op: Not,
                                    operand: Node {
                                        node: Identifier(
                                            Identifier {
                                                names: [
                                                    "a",
                                                ],
                                                pos: [
                                                    Node {
                                                        node: (),
                                                        filename: "",
                                                        line: 1,
                                                        column: 6,
                                                        end_line: 1,
                                                        end_column: 7,
                                                    },
                                                ],
                                                pkgpath: "",
                                                ctx: Load,
                                            },
                                        ),
                                        filename: "",
                                        line: 1,
                                        column: 6,
                                        end_line: 1,
                                        end_column: 7,
                                    },
                                },
                            ),
                            filename: "",
                            line: 1,
                            column: 5,
                            end_line: 1,
                            end_column: 7,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 4,
                end_line: 1,
                end_column: 8,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 8,
}

