kclvm/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__unary_recovery_5.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 59
expression: "crate::tests::parsing_expr_string(r#\"++i\"#)"
---
Node {
    node: Binary(
        BinaryExpr {
            left: Node {
                node: Unary(
                    UnaryExpr {
                        op: UAdd,
                        operand: Node {
                            node: Missing(
                                MissingExpr,
                            ),
                            filename: "",
                            line: 1,
                            column: 0,
                            end_line: 1,
                            end_column: 2,
                        },
                    },
                ),
                filename: "",
                line: 1,
                column: 0,
                end_line: 1,
                end_column: 1,
            },
            op: Bin(
                Add,
            ),
            right: Node {
                node: Identifier(
                    Identifier {
                        names: [
                            "i",
                        ],
                        pkgpath: "",
                        ctx: Load,
                    },
                ),
                filename: "",
                line: 1,
                column: 2,
                end_line: 1,
                end_column: 3,
            },
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 3,
}

